# datedim_with_holidays

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml  requirements.txt
datedim_generate/: generate.py
tests/: .test_holidays.py.swo  test_arguments.py  test_dataframe.py  test_holidays.py
