[project]
name = "datedim_with_holidays"
version = "0.0.1"
dependencies = [
	"holidays==0.49",
	"polars==0.20.31",
	"result==0.16.1"
]

[project.scripts]
datedim_generate = "generate.generate:main"

[project.optional-dependencies]
dev = ["pytest"] # TODO: version requirement

[tool.pytest.ini_options]
pythonpath = ["."]
