[project]
name = "datedim_generate"
version = "0.1.0"
dependencies = [
	"holidays==0.49",
	"polars==0.20.31",
	"result==0.16.1"
]

[project.scripts]
datedim_generate = "datedim_generate.generate:main"

[project.optional-dependencies]
dev = ["pytest"] # TODO: version requirement

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.poetry]
name = "datedim-generate"
version = "0.1.0"
description = ""
authors = ["wysiwys <144733119+wysiwys@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
datedim_generate = "datedim_generate.generate:main"

[tool.poetry.dependencies]
python = "^3.12"
holidays = "0.49"
polars = "0.20.31"
result = "0.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
